--- a/block-BHaacu/assets/stylesheets/_flexPercentage.scss
+++ b/block-BHaacu/assets/stylesheets/_flexPercentage.scss
@@ -1,4 +1,7 @@
 /* Column */
+.flex-10{
+  flex: 0 1 10%;
+}
 .flex-19{
     flex: 0 1 19%;
 }
@@ -38,6 +41,15 @@
 .flex-45{
     flex: 0 1 45%;
 }
-.flex-33{
-    flex: 0 1 33%;
+.flex-46{
+    flex: 0 1 45%;
+}
+.flex-32{
+    flex: 0 1 32%;
+}
+.flex-20{
+    flex: 0 1 20%;
+}
+.flex-48{
+    flex: 0 1 49%;
 }
