--- a/block-BHaacu/assets/stylesheets/_general.scss
+++ b/block-BHaacu/assets/stylesheets/_general.scss
@@ -20,7 +20,7 @@ a,li{
 }
 p{
     font-size: 16px;
-    color: #868D94;
+    color: black;
     font-weight: 500;
     margin: 20px 0;
     text-transform: capitalize;
