--- a/block-BHaacu/assets/stylesheets/style.scss
+++ b/block-BHaacu/assets/stylesheets/style.scss
@@ -10,10 +10,8 @@
     max-width: 1180px;
     margin: 0 auto; 
     width:100%; 
-    border: 2px solid red;
+    // border: 2px solid red;
 }
-
-
 // button 
 .btn{
     font-size: 16px;
@@ -26,7 +24,7 @@
     outline: 0;
     border: 0;
     display: inline-block;
-    background-color: #FD656B;
+    background-color: #DC3C45;
     border-radius: 50px;
     margin-right: 55px;
 }
@@ -62,12 +60,12 @@ active{
     color:#DC3C45;
 }
 .nav-bar{
-    margin-left: 480px;
-    // margin-right: -5px;
-    padding: 24px 0;
+    margin-left: 325px;
+    margin-right: -10px;
+    padding: 15px 0;
     vertical-align: middle;
 }
-.nav-bar a:hover{
+.nav-bar li a:hover{
     color: $primary;
     padding: 25px 10px;
     background-color: #EB5F61;
@@ -80,24 +78,56 @@ active{
     margin-left: 30px;
     color: #012D5B;
 }
+.nav-bar li {
+    padding: 10px 10px;
+    position: relative;
+}
+.dropdown_menu {
+    display: none;
+}
+.nav-bar ul li:hover .dropdown_menu{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: $secondary;
+}
+.dropdown_menu ul{
+    display: block;
+    margin-right: 30px;
+}
+.dropdown_menu ul li{
+    text-align: left;
+    width: 158px;
+    padding: 10px;
+}
+
+#toggle{
+    display: none;
+ }
+
 // HERO SECTION
 .hero{
     background: url(../media/banner-1.jpg) center center no-repeat;
     background-size: cover;
     height: 90vh;
     margin-top: 3px;
+    // position: absolute;
 }
 .hero-content{
     width: 39%;
-    margin-top: 250px;
+    position: relative;
+    top: 240px;
     margin-right: 20px;
 }
 .hero-content h1{
     text-align: left;
+
 }
 .hero-text{
     margin:20px 0;
     font-weight: 700;
+    color: $accent;
 }
 
 // Services Section
@@ -110,6 +140,9 @@ active{
     border-radius: 10px;
     padding: 30px;
     margin-top: 60px;
+}
+.services p {
+    color: $accent;
 }
 .article img{
     width: 100px;
@@ -145,6 +178,7 @@ active{
     line-height: 1.5;
 }
 .consulting-content p{
+    color: $accent;
     margin-bottom: 10px;
 }
 .consulting-content img{
@@ -370,6 +404,369 @@ margin-right: -8px;
 }
 .form-para{
     color: $accent;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 90px;
+}
+.form-control{
+    width: 100%;
+    padding: 5px;
+    background-color: #ffffff;
+    text-transform: capitalize;
+    position: relative ;
+}
+.form-control input{
+  width: 100%;
+  border : 2px solid grey;
+  border-radius: 4px;
+  display: block;
+  font-size: 14px;
+  padding: 8px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.form-control textarea{
+    width: 100%;
+    border : 2px solid grey;
+    border-radius: 4px;
+    display: block;
+    font-size: 14px;
+    padding: 8px;
+    width: 100%;
+    margin-bottom: 10px;   
+}
+.form-btn{
+    text-transform: capitalize;
+}
+iframe{
+    height: 300px;
+    width: 550px;
+    margin-bottom: 140px;
+    margin-left: 60px;
+}
+
+// SERVICES SECTION
+
+.services-content img{
+    width: 100%;
+}
+.product{
+    text-align: center;
+}
+.product-content p{
+    color: $accent;
+    margin-bottom: 50px;
+}
+.product-item{
+//   border: 1px solid red;
+  text-align: left;
+  margin-bottom: 22px;
+}
+.product-item img{
+    width: 25%;
+}
+.product-item p{
+    width: 90%;
+    text-align: left;
+}
+// DEAL SECTION
+.deal{
+    background-color: $tertiary;
+    padding: 40px;
+}
+.deal-content{
+    margin-right: 20px;
+}
+.deal-content h3{
+    color: $primary;
+    font-size: 20px;
+    text-transform:capitalize
+}
+.deal-content p{
+   color: $primary;
+   font-size: 12px;
+   margin-right: 420px;
+}
+.deal-btn{
+    background-color: #DC3C45;
+    color: $primary;
+    text-transform: capitalize;
+    border: 1px solid white;
+}
+.deal-line{
+    color: $primary;
+    font-size: 30px;
+}
+// AWARD SECTION
+.award{
+    text-align: center;
+}
+.award-content p{
+  width: 50%;
+  color: $accent;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 70px;
+}
+.award-item{
+    width: 60%;
+    text-align: center;
+    margin-left: 40px;
+}
+.award-item h2{
+    width: 94%;
+    line-height: 1.5;
+}
+.award-item p{
+    margin-bottom: 10px;
+    width: 80%;
+}
+.award-img img{
+   width:100%;
+}
+.award-item i {
+  color: $tertiary;
+  font-size: 60px;
+  border-radius: 50%;
+}
+// PRICING SECTION
+.pricing{
+    background-color: $secondary;
+    text-align: center;
+}
+.pricing-para{
+    color: $accent;
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+.pricing-item{
+    padding: 20px;
+    padding: 30px;
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    background-color: $primary;
+}
+.pricing-item h6{
+    font-size: 18px;
+    margin:19px 0;
+    font-weight: 700;
+}
+.pricing-item span{
+    color: grey;
+    text-transform: capitalize;
+
+}
+.pricing-item p{
+    font-size: 30px;
+    font-weight: 1000;
+    color: $accent;
+    font-style: bold;
+}
+.pricing-item ul li{
+    margin-bottom: 18px;
+    text-transform: capitalize;
+}
+.pricing-btn{
+   margin: 0 auto;
+   text-transform: capitalize;
+}
+.free, .premium{
+    background-color: $primary;
+    color: #DC3C45;
+    border: 1px solid #DC3C45;
+}
+// <!-- FREQUENTLY SECTION -->
+.frequently h2{
+    text-align: center;
+}
+.frequently-para{
+    color: $accent;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 90px;
+}
+.frequently-content{
+    border: 2px solid rgb(194, 190, 190);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.frequently-content p{
+    color: $accent;
+    text-align: left;
+}
+.frequently-content h2{
+    color: $accent;
+    text-align: left;
+}
+
+.bars{
+    visibility: hidden;
 }
 
 
+ /* /* RESPONSIVE DESIGN AND MEDIA QUERY */  
+
+ 
+/* MEDIA QUERY FOR SMALL SCREENS */
+@media screen and (max-width: 768px) {
+
+    .sm-wrap{
+        flex-wrap: wrap;
+    }
+    .sm-width-full{
+        width:100%;
+    }
+    .order-1{
+        order: 1;
+    }
+    .sm-column{
+        flex-direction: column;
+    }
+
+    html{
+        font-size: 10px;
+    }
+    .sm-flex-100{
+        flex: 0 1 100%;
+        // margin: 2rem 0;
+    }
+    
+    #toggle:checked ~ .nav {
+        display: inline-block;
+    }
+    .bars{
+        font-size: 2rem;
+        color: var(--textWhite);
+        visibility: visible;
+        z-index: 99;
+        display: inline-block;
+        color: var(--accent);
+    }
+    /* General */
+    .container{
+        max-width: 720px;
+    }
+    // header-ribbon
+    .header-ribbon address{
+        margin-right: 70px;
+    }
+    
+   /* Navbar */
+    .heading{
+        background-color: #F2F2F2;
+        height: 50px;
+        // position: fixed;
+        // width: 100%;
+        z-index: 999;
+    }
+    .nav-item a{
+        visibility: visible;
+        font-weight: 800;
+        // color: red;
+        margin-bottom: 130px;
+    }
+    .nav-bar{
+        display: none;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        height: 100vh;
+        width: 100%;
+        background-color: rgba(180, 151, 151, 0.9);
+        // margin-left: 50px;
+        padding-top: 12rem;
+        text-align: center;
+        z-index: 99;
+        
+    } 
+    .dropdown_menu{
+        margin-left: 100px;
+    }
+    .nav-bar ul li:hover .dropdown_menu{
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 100%;
+        background-color: $secondary;
+    }
+    .dropdown_menu ul{
+        display: block;
+        margin-right: 30px;
+    }
+    .dropdown_menu ul li{
+        text-align: left;
+        width: 158px;
+        padding: 10px;
+    }
+    #toggle:checked ~ .nav-bar {
+        display: inline-block;
+    }
+    .bars{
+        font-size: 2rem;
+        color: $primary;
+        visibility: visible;
+        z-index: 99;
+        display: inline-block;
+        color: $accent;
+    }
+    .brand, .bars{
+        // position: fixed;
+        margin-top: 10px;
+        top: 1.4rem;
+        bottom: 0;
+        z-index: 99;
+    }
+    .brand{
+        left: 2rem;
+    }
+    .bars{
+        right: 2rem;
+    }
+    /* HERO */
+    .hero{
+        height:auto;
+        padding: 6rem 0;
+    }
+    .hero-content{
+        position: relative;
+        top: -3px;
+        left: 70px;
+    }
+    // INDUSTRY SECTION
+    .industry-content img{
+        margin: 24px 0;
+    }
+    .sm-center{
+        margin: 0 auto;
+    }
+    // services section
+    .services-content img{
+        margin: 0 auto;
+    }
+    // CONSULTING SECTION
+    .consulting-content img{
+        margin: 20px 0;
+    }
+    // PRODUCT SECTION
+    .product-item {
+        text-align: center;
+        margin: 0 auto;
+    }
+    .product-item p, h5{
+        text-align: center;
+        margin: 25px 0;
+        margin-left: 22px;
+        font-size: 24px;
+    }
+    // Contact section
+    .map iframe{
+        margin: 0 auto;
+        margin-bottom: 30px;
+    }
+}
